<resources>
    <string name="app_name">MedicPlus</string>
    <string name="medicplus">MedicPlus</string>
    <string name="listar">Listar</string>
    <string name="cadastros">Cadastros</string>
    <string name="cadastrar_paciente">Cadastrar Paciente</string>
    <string name="cadastrar_consulta">Cadastrar Consulta</string>
    <string name="cadastrar_m_dico">Cadastrar Médico</string>
    <string name="consultas">Consultas</string>
    <string name="listar_consultas">Listar Consultas</string>
    <string name="listar_m_dicos">Listar Médicos</string>
    <string name="listar_pacientes">Listar Pacientes</string>
    <string name="m_dicos">Médicos</string>
    <string name="pacientes">Pacientes</string>
    <string name="paciente">Paciente:</string>
    <string name="m_dico">Médico:</string>
    <string name="data_da_consulta">Data da consulta:</string>
    <string name="mascaradata">/ /</string>
    <string name="hora_in_cio">Hora início:</string>
    <string name="hora_t_rmino">Hora término:</string>
    <string name="observa_es">Observações</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_do_m_dico">Nome do Médico:</string>
    <string name="nome">Nome</string>
    <string name="crm">CRM:</string>
    <string name="logradouro">Logradouro:</string>
    <string name="n_mero">Número:</string>
    <string name="cidade">Cidade:</string>
    <string name="uf">UF:</string>
    <string name="telefone_celular">Telefone Celular:</string>
    <string name="celular">Celular</string>
    <string name="telefone_fixo">Telefone Fixo:</string>
    <string name="nome_do_paciente">Nome do Paciente:</string>
    <string name="grupo_sangu_neo">Grupo Sanguíneo:</string>
    <string name="escolha_um_paciente">Escolha um Paciente</string>
    <string name="escolha_um_m_dico">Escolha um Médico</string>
    <string name="mascara">/ /</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
</resources>
