<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityConsultas">

    <ImageButton
        android:id="@+id/btn_home4"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginTop="69dp"
        android:background="#FFFF"
        android:onClick="jumpHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973"
        app:srcCompat="@drawable/casa2" />

    <Button
        android:id="@+id/btn_listCon"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:background="#9C00BCD4"
        android:text="@string/listar_consultas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/btn_listMed"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:background="#9C00BCD4"
        android:text="@string/listar_m_dicos"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/btn_listPac"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:background="#9C00BCD4"
        android:text="@string/listar_pacientes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="218dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098"
        app:srcCompat="@drawable/simb" />
</androidx.constraintlayout.widget.ConstraintLayout>